# llmops-workshop

./: .gitignore  .pre-commit-config.yaml  01-setup.ipynb  02-create-genai-app.ipynb  03-monitoring-evaluation-deployment.ipynb  04-ape-and-fine-tuning.ipynb  README.md  pyproject.toml
exercises/03-deployment/: app.py  requirements.txt
exercises/04-ape-and-fine-tuning/: README.md  requirements.txt
exercises/04-ape-and-fine-tuning/data/train/gold/: valid.jsonl
exercises/04-ape-and-fine-tuning/mlx/: config.yaml
exercises/04-ape-and-fine-tuning/programs/: sms_classifier-gemma3:1b-100ex-16p.json  sms_classifier-gemma3:1b.json
exercises/04-ape-and-fine-tuning/setup/: __setup_local.ipynb
exercises/04-ape-and-fine-tuning/src/: evaluation_helpers.py  langfuse_extensions.py  sms_classifier.py
exercises/shared/setup/: __setup_colab.ipynb
mlx/: config.yaml
mlx/data/old/: valid.jsonl
notebooks/cybersecurity/: 00-langfuse-dataset-preparation.ipynb  00-setup-colab.ipynb  00-setup-macos-devel.ipynb  00-setup.ipynb  01-langfuse-setup-prompts.ipynb  02-langfuse-evaluation.ipynb  03-langfuse-automatic-prompt-optimization.ipynb  04-finetuning-mlx.ipynb  __include.ipynb  __setup-colab.ipynb  __setup-macos-devel.ipynb  evaluation_helpers.py  sms_classifier.py
notebooks/cybersecurity/programs/: sms_classifier-gemma3:1b-8-200.json  sms_classifier-gemma3:1b-8.json  sms_classifier-qwen2.5:0.5b.json  sms_classifier-qwen2.5:1.5b-8.json  sms_classifier-smollm2:1.7b.json
