[tool.poetry]
name = "llmops-workshop"
version = "0.1.0"
description = ""
authors = ["Marek Wieiwórka <marek.wiewiorka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
dspy = "^2.6.16"
langfuse = "^2.60.2"
ipykernel = "^6.29.5"
polars = "^1.26.0"
matplotlib= "^3.10.1"
litellm= "1.62.4"
openai= "1.61.0"
json5 = "^0.10.0"
torch = "^2.6.0"
gguf = { git = "git@github.com/ggml-org/llama.cpp.git", rev = "2c3f8b850a4a6cff0f5dda2135c03fc81d33ed8b", subdirectory = "gguf-py" }
#torchvision = "^0.20.0"
#torchao = "^0.5.0"
#torchtune = "^0.3.1"
mlx-lm = "^0.22.2"
ollama = "^0.4.7"
notebook = "^7.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pre-commit = "2.20.0"
jupyter = "1.0.0"
nbqa = { version = "^1.9.0", extras=["toolchain"] }
nbstripout = "^0.7.1"
black = "^24.10.0"